<resources>
    <string name="app_name">Actividad2_1</string>
    <string name="btnEmpezar">Empezar el juego</string>
    <string name="btnSalir">Salir de la App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ivdestino1">ivDestino1</string>
    <string name="ivdestino2">ivDestino2</string>
    <string name="ivdestino3">ivDestino3</string>
    <string name="intentos">Intentos</string>
    <string name="bravo">¡¡ Bravo !!</string>
    <string name="salir">Salir</string>
    <string name="volverjugar">Volver a jugar</string>
    <string name="pantalla_inicio">Volver a inicio</string>
    <string name="_0">0</string>

</resources>