<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    tools:context=".Juego">

    <TextView
        android:id="@+id/txtIntentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/intentos"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtNumIntentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvBravo"
        android:layout_width="147dp"
        android:layout_height="38dp"
        android:layout_below="@+id/ficha2"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="-48dp"
        android:layout_marginRight="-48dp"
        android:layout_toStartOf="@+id/ficha3"
        android:layout_toLeftOf="@+id/ficha3"
        android:layout_toEndOf="@+id/ficha1"
        android:layout_toRightOf="@+id/ficha1"
        android:gravity="center"
        android:text="@string/bravo"
        android:textColor="@color/transparente"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.example.actividad2_1.FichaJuego
        android:id="@+id/ficha1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/forma_redondeada"
        android:foregroundGravity="center"
        android:src="@drawable/ic_launcher_foreground" />

    <com.example.actividad2_1.FichaJuego
        android:id="@+id/ficha2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp"
        android:layout_toEndOf="@+id/ficha1"
        android:layout_toRightOf="@+id/ficha1"
        android:background="@drawable/forma_redondeada"
        android:foregroundGravity="center"
        android:src="@drawable/ic_launcher_foreground" />

    <com.example.actividad2_1.FichaJuego
        android:id="@+id/ficha3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp"
        android:layout_toEndOf="@+id/ficha2"
        android:layout_toRightOf="@+id/ficha2"
        android:background="@drawable/forma_redondeada"
        android:foregroundGravity="center"
        android:src="@drawable/ic_launcher_foreground" />


    <LinearLayout
        android:id="@+id/llBotones"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ivDestino3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <Button
            android:id="@+id/btnVolverJugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/volverjugar" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/pantalla_inicio" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSalirJuego"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/salir" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivDestino1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/forma_redondeada"
        android:contentDescription="@string/ivdestino1"
        android:foregroundGravity="center"
        app:srcCompat="@mipmap/logan_0_foreground" />

    <ImageView
        android:id="@+id/ivDestino2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="30dp"
        android:layout_toEndOf="@+id/ivDestino3"
        android:layout_toRightOf="@+id/ivDestino3"
        android:background="@drawable/forma_redondeada"
        android:contentDescription="@string/ivdestino1"
        android:foregroundGravity="center"
        android:scaleType="centerInside"
        app:srcCompat="@android:mipmap/sym_def_app_icon" />

    <ImageView
        android:id="@+id/ivDestino3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="30dp"
        android:layout_toEndOf="@+id/ivDestino1"
        android:layout_toRightOf="@+id/ivDestino1"
        android:background="@drawable/forma_redondeada"
        android:contentDescription="@string/ivdestino1"
        android:foregroundGravity="center"
        app:srcCompat="@android:drawable/presence_video_away" />

</RelativeLayout>